// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - default - value[0] - Modal 1`] = `
<div
  id="default"
>
  mocked
</div>
`;

exports[`Mock render - default - value[0] - Modal 2`] = `Array []`;

exports[`Mock render - default - value[0] - Modal 3`] = `Array []`;

exports[`Mock render - default - value[0] - Modal 4`] = `Array []`;

exports[`Mock render - default - value[0] - Modal 5`] = `Array []`;

exports[`Mock render - default - value[0] - Modal 6`] = `Array []`;

exports[`Mock render - properties.title - value[0] - Modal 1`] = `
<div
  id="properties.title"
>
  mocked
</div>
`;

exports[`Mock render - properties.title - value[0] - Modal 2`] = `Array []`;

exports[`Mock render - properties.title - value[0] - Modal 3`] = `Array []`;

exports[`Mock render - properties.title - value[0] - Modal 4`] = `Array []`;

exports[`Mock render - properties.title - value[0] - Modal 5`] = `Array []`;

exports[`Mock render - properties.title - value[0] - Modal 6`] = `Array []`;

exports[`Mock render - properties: bodyStyle: border: 10px solid blue - value[0] - Modal 1`] = `
<div
  id="properties: bodyStyle: border: 10px solid blue"
>
  mocked
</div>
`;

exports[`Mock render - properties: bodyStyle: border: 10px solid blue - value[0] - Modal 2`] = `Array []`;

exports[`Mock render - properties: bodyStyle: border: 10px solid blue - value[0] - Modal 3`] = `Array []`;

exports[`Mock render - properties: bodyStyle: border: 10px solid blue - value[0] - Modal 4`] = `Array []`;

exports[`Mock render - properties: bodyStyle: border: 10px solid blue - value[0] - Modal 5`] = `Array []`;

exports[`Mock render - properties: bodyStyle: border: 10px solid blue - value[0] - Modal 6`] = `Array []`;

exports[`Mock render - properties: cancelText: Text of the Cancel button - value[0] - Modal 1`] = `
<div
  id="properties: cancelText: Text of the Cancel button"
>
  mocked
</div>
`;

exports[`Mock render - properties: cancelText: Text of the Cancel button - value[0] - Modal 2`] = `Array []`;

exports[`Mock render - properties: cancelText: Text of the Cancel button - value[0] - Modal 3`] = `Array []`;

exports[`Mock render - properties: cancelText: Text of the Cancel button - value[0] - Modal 4`] = `Array []`;

exports[`Mock render - properties: cancelText: Text of the Cancel button - value[0] - Modal 5`] = `Array []`;

exports[`Mock render - properties: cancelText: Text of the Cancel button - value[0] - Modal 6`] = `Array []`;

exports[`Mock render - properties: centered: true - value[0] - Modal 1`] = `
<div
  id="properties: centered: true"
>
  mocked
</div>
`;

exports[`Mock render - properties: centered: true - value[0] - Modal 2`] = `Array []`;

exports[`Mock render - properties: centered: true - value[0] - Modal 3`] = `Array []`;

exports[`Mock render - properties: centered: true - value[0] - Modal 4`] = `Array []`;

exports[`Mock render - properties: centered: true - value[0] - Modal 5`] = `Array []`;

exports[`Mock render - properties: centered: true - value[0] - Modal 6`] = `Array []`;

exports[`Mock render - properties: closable: false - value[0] - Modal 1`] = `
<div
  id="properties: closable: false"
>
  mocked
</div>
`;

exports[`Mock render - properties: closable: false - value[0] - Modal 2`] = `Array []`;

exports[`Mock render - properties: closable: false - value[0] - Modal 3`] = `Array []`;

exports[`Mock render - properties: closable: false - value[0] - Modal 4`] = `Array []`;

exports[`Mock render - properties: closable: false - value[0] - Modal 5`] = `Array []`;

exports[`Mock render - properties: closable: false - value[0] - Modal 6`] = `Array []`;

exports[`Mock render - properties: footer: false - value[0] - Modal 1`] = `
<div
  id="properties: footer: false"
>
  mocked
</div>
`;

exports[`Mock render - properties: footer: false - value[0] - Modal 2`] = `Array []`;

exports[`Mock render - properties: footer: false - value[0] - Modal 3`] = `Array []`;

exports[`Mock render - properties: footer: false - value[0] - Modal 4`] = `Array []`;

exports[`Mock render - properties: footer: false - value[0] - Modal 5`] = `Array []`;

exports[`Mock render - properties: footer: false - value[0] - Modal 6`] = `Array []`;

exports[`Mock render - properties: mask: false - value[0] - Modal 1`] = `
<div
  id="properties: mask: false"
>
  mocked
</div>
`;

exports[`Mock render - properties: mask: false - value[0] - Modal 2`] = `Array []`;

exports[`Mock render - properties: mask: false - value[0] - Modal 3`] = `Array []`;

exports[`Mock render - properties: mask: false - value[0] - Modal 4`] = `Array []`;

exports[`Mock render - properties: mask: false - value[0] - Modal 5`] = `Array []`;

exports[`Mock render - properties: mask: false - value[0] - Modal 6`] = `Array []`;

exports[`Mock render - properties: maskClosable: false - value[0] - Modal 1`] = `
<div
  id="properties: maskClosable: false"
>
  mocked
</div>
`;

exports[`Mock render - properties: maskClosable: false - value[0] - Modal 2`] = `Array []`;

exports[`Mock render - properties: maskClosable: false - value[0] - Modal 3`] = `Array []`;

exports[`Mock render - properties: maskClosable: false - value[0] - Modal 4`] = `Array []`;

exports[`Mock render - properties: maskClosable: false - value[0] - Modal 5`] = `Array []`;

exports[`Mock render - properties: maskClosable: false - value[0] - Modal 6`] = `Array []`;

exports[`Mock render - properties: maskStyle: border: 10px solid blue - value[0] - Modal 1`] = `
<div
  id="properties: maskStyle: border: 10px solid blue"
>
  mocked
</div>
`;

exports[`Mock render - properties: maskStyle: border: 10px solid blue - value[0] - Modal 2`] = `Array []`;

exports[`Mock render - properties: maskStyle: border: 10px solid blue - value[0] - Modal 3`] = `Array []`;

exports[`Mock render - properties: maskStyle: border: 10px solid blue - value[0] - Modal 4`] = `Array []`;

exports[`Mock render - properties: maskStyle: border: 10px solid blue - value[0] - Modal 5`] = `Array []`;

exports[`Mock render - properties: maskStyle: border: 10px solid blue - value[0] - Modal 6`] = `Array []`;

exports[`Mock render - properties: okText: Text of the OK button - value[0] - Modal 1`] = `
<div
  id="properties: okText: Text of the OK button"
>
  mocked
</div>
`;

exports[`Mock render - properties: okText: Text of the OK button - value[0] - Modal 2`] = `Array []`;

exports[`Mock render - properties: okText: Text of the OK button - value[0] - Modal 3`] = `Array []`;

exports[`Mock render - properties: okText: Text of the OK button - value[0] - Modal 4`] = `Array []`;

exports[`Mock render - properties: okText: Text of the OK button - value[0] - Modal 5`] = `Array []`;

exports[`Mock render - properties: okText: Text of the OK button - value[0] - Modal 6`] = `Array []`;

exports[`Mock render - properties: width: 350px - 520px is default - value[0] - Modal 1`] = `
<div
  id="properties: width: 350px - 520px is default"
>
  mocked
</div>
`;

exports[`Mock render - properties: width: 350px - 520px is default - value[0] - Modal 2`] = `Array []`;

exports[`Mock render - properties: width: 350px - 520px is default - value[0] - Modal 3`] = `Array []`;

exports[`Mock render - properties: width: 350px - 520px is default - value[0] - Modal 4`] = `Array []`;

exports[`Mock render - properties: width: 350px - 520px is default - value[0] - Modal 5`] = `Array []`;

exports[`Mock render - properties: width: 350px - 520px is default - value[0] - Modal 6`] = `Array []`;

exports[`Mock render - properties: wrapperStyle: border: 10px solid blue - value[0] - Modal 1`] = `
<div
  id="properties: wrapperStyle: border: 10px solid blue"
>
  mocked
</div>
`;

exports[`Mock render - properties: wrapperStyle: border: 10px solid blue - value[0] - Modal 2`] = `Array []`;

exports[`Mock render - properties: wrapperStyle: border: 10px solid blue - value[0] - Modal 3`] = `Array []`;

exports[`Mock render - properties: wrapperStyle: border: 10px solid blue - value[0] - Modal 4`] = `Array []`;

exports[`Mock render - properties: wrapperStyle: border: 10px solid blue - value[0] - Modal 5`] = `Array []`;

exports[`Mock render - properties: wrapperStyle: border: 10px solid blue - value[0] - Modal 6`] = `Array []`;

exports[`Mock render - properties: zIndex: 1200 - 1000 is the default - value[0] - Modal 1`] = `
<div
  id="properties: zIndex: 1200 - 1000 is the default"
>
  mocked
</div>
`;

exports[`Mock render - properties: zIndex: 1200 - 1000 is the default - value[0] - Modal 2`] = `Array []`;

exports[`Mock render - properties: zIndex: 1200 - 1000 is the default - value[0] - Modal 3`] = `Array []`;

exports[`Mock render - properties: zIndex: 1200 - 1000 is the default - value[0] - Modal 4`] = `Array []`;

exports[`Mock render - properties: zIndex: 1200 - 1000 is the default - value[0] - Modal 5`] = `Array []`;

exports[`Mock render - properties: zIndex: 1200 - 1000 is the default - value[0] - Modal 6`] = `Array []`;

exports[`Mock render - with html in title - value[0] - Modal 1`] = `
<div
  id="with html in title"
>
  mocked
</div>
`;

exports[`Mock render - with html in title - value[0] - Modal 2`] = `Array []`;

exports[`Mock render - with html in title - value[0] - Modal 3`] = `Array []`;

exports[`Mock render - with html in title - value[0] - Modal 4`] = `Array []`;

exports[`Mock render - with html in title - value[0] - Modal 5`] = `Array []`;

exports[`Mock render - with html in title - value[0] - Modal 6`] = `Array []`;
